fixed spacing in extra links section

--- a/styles/partials/_extraLinks.scss
+++ b/styles/partials/_extraLinks.scss
@@ -8,6 +8,7 @@
 
     .wrapper {
         display: flex;
+        padding: 0 6rem;
     }
 
     h3 {
