--- a/styles/partials/_mediaQueries.scss
+++ b/styles/partials/_mediaQueries.scss
@@ -113,6 +113,7 @@
     .extraLinks .wrapper {
         flex-direction: column;
         align-items: center;
+        padding: 0;
     }
 
     .subscribe {
