--- a/styles/style.css
+++ b/styles/style.css
@@ -447,6 +447,7 @@ h1 {
 }
 .extraLinks .wrapper {
   display: flex;
+  padding: 0 6rem;
 }
 .extraLinks h3 {
   color: rgb(17, 101, 0);
@@ -616,6 +617,7 @@ footer p {
   .extraLinks .wrapper {
     flex-direction: column;
     align-items: center;
+    padding: 0;
   }
   .subscribe {
     align-items: center;
